# fecapa-explorer

./: .gitignore  Cargo.toml  README.md  app-tui.js  equipos.json  package-lock.json  package.json  scrape-hockey.js
.github/workflows/: scrape.yml
src/: commands.rs  main.rs  models.rs  state.rs  ui.rs
