[package]
name = "fecapa-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.21"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
regex = "1"

[[bin]]
name = "fecapa-explorer"
path = "src/main.rs"
